add kgx get call
